[tool.poetry]
name = "PiicoDev-SSD1306"
version = "1.10.1"
description = "Drivers for the PiicoDev ecosystem of sensors and modules"
authors = ["Core Electronics <production.inbox@coreelectronics.com.au>"]
license = "MIT"
readme = "README.md"
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: Implementation :: MicroPython",
        "License :: OSI Approved :: MIT License",
    ]

packages = [
    { include = "PiicoDev_SSD1306.py" }
]

[project.urls]
Homepage = "https://core-electronics.com.au/piicodev-oled-display-module-128x64-ssd1306.html"
Documentation = "https://core-electronics.com.au/guides/raspberry-pi-pico/piicodev-oled-ssd1306-raspberry-pi-pico-guide/"
Repository = "https://github.com/CoreElectronics/CE-PiicoDev-SSD1306-MicroPython-Module"
Issues = "https://github.com/CoreElectronics/CE-PiicoDev-SSD1306-MicroPython-Module/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[tool.poetry.dependencies]
python = ">=3.7"

PiicoDev_Unified = { git = "https://github.com/garynthompson/CE-PiicoDev-Unified.git", branch = "main" }


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
